<resources>
    <string name="app_name">my_activity</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="query">Query</string>
    <string name="bind_local">Bind-Local</string>
    <string name="unbind_local">Unbind-Local</string>
    <string name="call_local">Call-Local</string>
    <string name="bind_msg">Bind-Msg</string>
    <string name="unbind_msg">Unbind-Msg</string>
    <string name="call_msg">Call-Msg</string>
    <string name="bind_aidl">Bind-Aidl</string>
    <string name="unbind_aidl">Unbind-Aidl</string>
    <string name="call_aidl">Call-Aidl</string>
    <string name="bind_remote">Bind-Remote</string>
    <string name="unbind_remote">Unbind-Remote</string>
    <string name="call_remote">Call-Remote</string>
    <string name="bind_remote_native">Bind-Remote-Native</string>
    <string name="unbind_remote_native">Unbind-Remote-Native</string>
    <string name="call_remote_nateive">Call-Remote-Native</string>
    <string name="send_broadcast">Send Broadcast</string>
</resources>
